# gradio-ai-v2

./: .gitignore  .tmp_patch.txt  Install.bat  Launch.bat  README.md  Verify.bat  app.py  launch_log.txt  pyproject.toml  requirements-lock-cu130.txt  requirements.txt  test-plan-face-swap.md  test-plan-pr8-preservation-upscale-v2.md  test-plan-preservation-upscale.md
docs/: INTEGRATION_INSTRUCTIONS.py  README_AUDIO.md  README_Launch.md  REFACTOR_COMPLETE.md  REFACTOR_SUMMARY.md  UI_CHANGES_VISUAL.md  app_refactor_notes.md  app_refactor_plan.txt  audio_separation_research.md  qwen_edit_model_research.md
scripts/: Launch.bat.debug  Launch_Comprehensive.bat  Verify.bat  audio_processor.py  cleanup_cache.py  fix_layout_comprehensive.py  fix_onnx_gpu.bat  fix_ui_layout.py  inspect_quantized_layers.py  storage_report.ps1  verify_install.py  write_dependency_metadata.py
src/: __init__.py  config.py  constants.py  runtime_policies.py  security.py  startup.py  state.py
src/audio/: __init__.py  audio_separator.py  audio_ui_helpers.py  qwen_tts_helper.py  whisper_transcribe_helper.py
src/core/: __init__.py  async_batch_integration.py  async_batch_pipeline.py  batch_gen.py  cuda_graphs.py  gender_helper.py  (+6 more)
tests/: __init__.py  test_accelerator_installer.py  test_dependency_contracts.py  test_lora_zimage.py  test_model_resolution.py  test_pipeline_manager.py  test_startup_preflight.py  test_state_persistence.py  test_txt2img_fallback.py  test_ui_visibility.py  test_video_assembly.py  test_video_temporal.py  test_zimage_img2img_dispatch.py
user_state/: ui_state.json
(+22 files in other folders)
